# JustChat

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODING_CONVENTIONS.md  Cargo.toml  README.md  plan.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-28-onboarding-jtc1.md  2026-05-29-ui-redesign.md
docs/superpowers/specs/: 2026-05-28-onboarding-jtc1-design.md  2026-05-29-ui-redesign-design.md
justtalk-core/: Cargo.toml
justtalk-core/src/: api.rs  lib.rs
justtalk-core/src/crypto/: mod.rs  plain.rs  traits.rs
justtalk-core/src/engine/: code_router.rs  mod.rs  pairing_flow.rs  peer_manager.rs  peer_recovery.rs  state_machine.rs
justtalk-core/src/identity/: keypair.rs  mod.rs
justtalk-core/src/network/: health_monitor.rs  mod.rs  p2p.rs  reconnect_manager.rs  signaling_client.rs
justtalk-core/src/protocol/: message.rs  mod.rs  pairing.rs  room.rs  signaling.rs  webrtc_types.rs
justtalk-core/src/storage/: contacts.rs  messages.rs  mod.rs  settings.rs
justtalk-flutter/: README.md  pubspec.yaml
justtalk-flutter/android/app/: build.gradle.kts
justtalk-flutter/ios/: Podfile
justtalk-flutter/ios/Runner/: Info.plist
justtalk-flutter/ios/Runner.xcodeproj/: project.pbxproj
justtalk-flutter/lib/: main.dart
justtalk-flutter/lib/models/: chat_state.dart  notification_state.dart  pairing_code.dart
justtalk-flutter/lib/pages/: answer_qr_page.dart  chat_page.dart  circle_page.dart  (+8 more)
justtalk-flutter/linux/: CMakeLists.txt
justtalk-flutter/test/: widget_test.dart
justtalk-flutter/windows/: CMakeLists.txt
justtalk-signaling/: Cargo.toml
justtalk-signaling/src/: main.rs
research/: encryption-patterns.md  p2p-nat-traversal.md  voice-architecture.md
(+13 files in other folders)
