[package]
name = "justtalk-core"
version = "0.1.0"
edition = "2024"
description = "JustTalk core library — P2P messaging, encryption, voice"

[dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = "2"
rand = "0.8"
thiserror = "2"
tracing = "0.1"
hex = "0.4"

[features]
default = []
voice = []
