[package]
name = "justtalk-core"
version = "0.1.0"
edition = "2024"
description = "JustTalk core library — P2P messaging, encryption, voice"

[dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
ed25519-dalek = "2"
rand = "0.8"
thiserror = "2"
tracing = "0.1"
hex = "0.4"
base64 = "0.22"
flate2 = "1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
log = "0.4"

[dev-dependencies]
tempfile = "3"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
voice = []
