[package]
name = "justtalk-signaling"
version = "0.1.0"
edition = "2024"
description = "JustTalk signaling server — peer discovery and WebRTC negotiation"

[dependencies]
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
